[build-system]
requires = [
	"setuptools >= 68.1.0",
    "srctools @ git+https://github.com/Project-Collapse-Studios/srctools.git"
	]
build-backend = "setuptools.build_meta"

[project]
name = "PyCaptionCompiler"
requires-python = ">=3.8"
version = "1.3"
urls = {source="https://github.com/Project-Collapse-Studios/PyCaptionCompiler"}
description = "Caption compiler library for Source Engine games, re-written in Python."
readme = "README.md"
keywords = ["Steam", "Valve", "Source Engine"]
authors = [
	{name="Project Collapse Studios"}
]
license = {text = "MIT"}
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3 :: Only",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Libraries",
	"Topic :: Games/Entertainment"
]
dependencies=[
	"srctools @ git+https://github.com/Project-Collapse-Studios/srctools.git"
]


[tool.setuptools.packages.find]
	where = ["src"]
	include = ["pycaptioncompiler*"]